--- a/recruitment.html
+++ b/recruitment.html
@@ -105,7 +105,6 @@
                 
                 <div>
                 <p>
-                -----DRAFT of content for later implementation in a public setting taken from flyer-----<br>
                 We are seeking drivers to participate in a research experiment. The research goal is to assess the impact of adaptive cruise control 
                 (ACC) equipped vehicles to smooth traffic, thereby increasing fuel economy of all cars locally. A series of experiments will be run that involve 
                 multiple vehicles running custom ACC and additional vehicles that are instrumented to measure the surrounding traffic. The experiments will take 
@@ -139,7 +138,7 @@
                 </p>
                 <p>
                 <b>Compensation</b> <br>
-                Compensation will be announced at a later date. 
+                Drivers will be fairly compensated for their time. Compensation will be announced at a later date. 
                 </p>
                 <p>
                 This research is being conducted by Matthew Nice under the supervision of Prof. Dan Work in Civil Engineering 
