--- a/recruitment.html
+++ b/recruitment.html
@@ -107,35 +107,37 @@
                 <p>
                 -----DRAFT of content for later implementation in a public setting taken from flyer-----<br>
                 We are seeking drivers to participate in a research experiment. The research goal is to assess the impact of adaptive cruise control 
-                (ACC) equipped vehicles to smooth traffic, thereby increasing fuel economy of all cars locally. A series of experiments will be run that involve 
-                multiple vehicles running custom ACC and additional vehicles that are instrumented to measure the surrounding traffic. The experiments will take 
+                (ACC)-equipped vehicles to smooth traffic, thereby increasing fuel economy of all cars locally. A series of experiments will be run that involve 
+                multiple vehicles running custom ACC. The experiments will take 
                 place on I-24 on a stretch of freeway and will consist only of standard driving maneuvers.   
                 </p>
                 <p>
-                The data collected during the test includes vehicle data (e.g., speed, acceleration, fuel information); Publicly available video data from Tennessee 
-                Department of Transportation owned traffic cameras and drones; Dash cameras installed in the vehicles. We do not collect personally identifiable 
+                The data collected during the test includes vehicle data (e.g., position, speed, acceleration, radar measurements); publicly available video data from Tennessee 
+                Department of Transportation-owned traffic cameras and drones; and dash cameras installed in the vehicles. We do not collect personally identifiable 
                 information (PII) about the drivers as part of the research data.  
                 </p>
                 <p>
                 Procedures used to determine eligibility follow the guidelines set out by Vanderbilt University Risk and Insurance Management driving eligibility 
-                procedures. All persons willing to volunteer must be over 18 years old and have a government issued driver's license. Drivers may additionally be 
+                procedures. All persons willing to volunteer must be over 18 years old and have a government-issued driver's license. Drivers may additionally be 
                 required to take a Vanderbilt Driver Orientation course, consent to an Motor Vehicle Report background check, and meet any additional requirements 
                 set forth. All participants will be expected to attend a safety and experimental test briefing prior to the start of testing. 
                 </p>
                 <p>
                 <b>Availability</b> <br>
-                One weekday from November 7th to November 11th, 2022 for a training no longer than 3 hours. <br>
-				Weekdays from Monday, November 14th to Friday, November 18th, 2022 between the hours of 5AM and 10:30AM. <br>
-				Daily driving will consist of no more than a single test, with breaks given in between as needed.
+                <ul>
+                    <li>One weekday from November 7th to November 11th, 2022 for a training no longer than 3 hours. </li>
+				    <li>Weekdays from Monday, November 14th to Friday, November 18th, 2022 between the hours of 5AM and 10:30AM. </li>
+				    <li>Daily driving will consist of no more than a single test, with breaks given in between as needed.</li>
+                </ul>
                 </p>
                 <p>
-                <b>Required experience</b> <br>
-                Driver’s License <br>
-				18 years of age or older <br>
-				Comfortable with typical driving <br>
-				Before driving, you must meet eligibility requirements set forth by Vanderbilt Risk and Insurance Management which may include a Motor 
-				Vehicle Report driving background check and Driving Orientation through Vanderbilt University (this can be done after you contact us for 
-				volunteering, and before data collection)  
+                <b>Prerequisites</b> <br>
+                <ul>
+                    <li>Government-issued Driver’s License </li>
+				    <li>18 years of age or older </li>
+				    <li>Comfortable with typical driving </li>
+				    <li>Before driving, you must meet eligibility requirements set forth by Vanderbilt Risk and Insurance Management which may include a Motor Vehicle Report driving background check and Driving Orientation through Vanderbilt University (this can be done after you contact us for volunteering, and before data collection)  </li>
+                </ul>
                 </p>
                 <p>
                 <b>Compensation</b> <br>
