--- a/recruitment.html
+++ b/recruitment.html
@@ -107,14 +107,14 @@
                 <p>
                 We are seeking safe drivers to participate in a research experiment. The research goal is to assess the impact of adaptive cruise control 
                 (ACC)-equipped vehicles to smooth traffic, thereby increasing fuel economy of all cars locally. A series of experiments will be run that involve 
-                multiple vehicles running custom ACC. The experiments will take place in the mornings on I-24 between Sam Ridley Parkway and Haywood Lane, and will
-                 consist only of standard driving maneuvers with the use of ACC.
+                multiple vehicles running custom ACC. The experiments will take place in the mornings on I-24 between Sam Ridley Parkway and Haywood Lane, and 
+                will consist only of standard driving maneuvers while using the custom ACC.
                 </p>
                 
                 	<b>Availability</b> <br>
                 	<ul>
                 		<li><b>Training session: </b> One weekday from November 7th to November 11th, 2022 for a training no longer than 3 hours.</li>
-                		<li><b>Main Experiments: </b> Weekdays from Monday, November 14th to Friday, November 18th, 2022 between the hours of 5AM and 10:30AM.</li>
+                		<li><b>Main Experiments: </b> Five weekdays from Monday, November 14th to Friday, November 18th, 2022 between the hours of 5AM and 10:30AM.</li>
                 	</ul>
 
                 	<b>Prerequisites</b> <br>
@@ -122,7 +122,7 @@
                 		<li>Government-issued Driver’s License; </li>
 						<li>18 years of age or older; </li>
 						<li>Comfortable with typical freeway driving; </li>
-						<li>Before driving, you must meet eligibility requirements set forth by Vanderbilt Risk and Insurance Management which may include a Motor Vehicle Report driving background check and Driving Orientation through Vanderbilt University; and </li>
+						<li>Before driving, you must meet eligibility requirements set forth by Vanderbilt Risk and Insurance Management which may include a Motor Vehicle Report (MVR) driving background check and Driving Orientation through Vanderbilt University; </li>
 						<li>You will receive a link to request the MVR check after you Sign Up. Request this check as soon as possible, as it must be completed before training.</li>
 						<li>You do not need a vehicle, one will be provided to you for use during the experiments.</li>
             		</ul>
