add jon davis, update others

--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
                                     <img class="rounded-circle" src="images/berkeley/headshot-lee.jpg">
                                     <h6 class="p-3">
                                         Jonathan Lee <br>
-                                        <small class="text-muted">Sr. Engineering Manager & Project Coordinator, UC Berkeley</small>
+                                        <small class="text-muted">Chief Engineer & Co-Principal Investigator, UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -384,6 +384,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-davis.jpeg">
+                                    <h6 class="p-3">
+                                        Jon Davis <br>
+                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/rutgers/headshot-delorenzo.jpg">
                                     <h6 class="p-3">
                                         Ryan De Lorenzo <br>
@@ -409,13 +416,6 @@
                                     <h6 class="p-3">
                                         Derek Gloudemans <br>
                                         <small class="text-muted">PhD Student, Vanderbilt University</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
-                                    <h6 class="p-3">
-                                        Manasi Gowda<br>
-                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -454,24 +454,10 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/berkeley/headshot-johnlee.png">
-                                    <h6 class="p-3">
-                                        John Lee<br>
-                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-lichtle.jpeg">
                                     <h6 class="p-3">
                                         Nathan Lichtlé <br>
                                         <small class="text-muted">PhD Student, UC Berkeley</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/berkeley/headshot-liu.jpg">
-                                    <h6 class="p-3">
-                                        Jessica Liu <br>
-                                        <small class="text-muted">Masters Student, UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -578,13 +564,6 @@
                                     <h6 class="p-3">
                                         Fadwa Alaskar <br>
                                         <small class="text-muted">Academic Researcher, King Abdulaziz City for Science and Technology/UC Berkeley</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
-                                    <h6 class="p-3">
-                                        Zimo Zhang<br>
-                                        <small class="text-muted">Masters Student, University of Pittsburgh/UC Berkeley</small>
                                     </h6>
                                 </div>
                             </div>
@@ -840,6 +819,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
+                                        Manasi Gowda<br>
+                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-han.jpeg">
                                     <h6 class="p-3">
                                         Songye Han <br>
@@ -882,9 +868,23 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-johnlee.png">
+                                    <h6 class="p-3">
+                                        John Lee<br>
+                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-li.jpg">
                                     <h6 class="p-3">
                                         Ruicong Li <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-liu.jpg">
+                                    <h6 class="p-3">
+                                        Jessica Liu <br>
                                         <small class="text-muted">Masters Student, UC Berkeley</small>
                                     </h6>
                                 </div>
@@ -1012,6 +1012,13 @@
                                     <h6 class="p-3">
                                         Junqing Zhang <br>
                                         <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
+                                        Zimo Zhang<br>
+                                        <small class="text-muted">Masters Student, University of Pittsburgh/UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
