berkeley news post-mvt

--- a/videos.html
+++ b/videos.html
@@ -70,6 +70,13 @@
                 </h1>
                 <div class="row justify-content-center">
                     <div class="col-xl-8 text-center">
+                        <h2>Massive field test showing how AI smooths traffic flow</h2>
+                        <p>A <a href="https://www.pbs.org/wgbh/nova/" target="_blank">Berkeley News</a> presentation following the conclusion of the MegaVanderTest</p>
+                        <iframe width="50%" height="208" src="https://www.youtube.com/embed/PA3lyoCZnP0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 text-center">
                         <h2>The Hidden Cause of Traffic Jams—and How to Solve Them</h2>
                         <p>A <a href="https://www.pbs.org/wgbh/nova/" target="_blank">NOVA PBS</a> presentation featuring PI Professor Alexandre Bayen</p>
                         <iframe width="50%" height="208" src="https://www.youtube.com/embed/7CbVuF57VVk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
