--- a/index.html
+++ b/index.html
@@ -211,16 +211,44 @@
                                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 								<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="images/project/group-picture.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="images/project/L1060461.jpg" alt="First slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="images/project/incar4.jpg" alt="Second slide">
+                                    <img class="d-block w-100" src="images/project/L1060108.jpg" alt="Second slide">
                                 </div>
-								<div class="carousel-item">
-                                    <img class="d-block w-100" src="images/project/acc_arizona_briefing.JPG" alt="Third slide">
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/project/L1060152.jpg" alt="Third slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/project/L1060195.jpg" alt="Fourth slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/project/L1060204.jpg" alt="Fifth slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/project/L1060250-2.jpg" alt="Sixth slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/project/L1060261.jpg" alt="Seventh slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/project/L1060274.jpg" alt="Eighth slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/project/L1060288.jpg" alt="Ninth slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/project/L1060386.jpg" alt="Tenth slide">
                                 </div>
                             </div>
                         </div>
