--- a/index.html
+++ b/index.html
@@ -308,8 +308,6 @@
                             <a class="card-link float-right" href="https://www.i24motion.org/" target="_blank">Learn More</a>
                         </div>
                     </div>
-                </div>	
-				<div class="card-deck pt-md-5">
                     <div class="card">
                         <img src="images/project/libpanda-grey.png" class="card-img-top">
                         <div class="card-body">
@@ -322,12 +320,12 @@
                             <a class="card-link float-right" href="https://jmscslgroup.github.io/libpanda/" target="_blank">Learn More</a>
                         </div>
                     </div>
-                    <div class="card bg-light" style="border: 0px">
+                    <!-- <div class="card bg-light" style="border: 0px"> -->
                         <!-- Empty card to fill in empty space -->
-                    </div>
-                    <div class="card bg-light" style="border: 0px">
+                    <!-- </div> -->
+                    <!-- <div class="card bg-light" style="border: 0px"> -->
                         <!-- Empty card to fill in empty space -->
-                    </div>
+                    <!-- </div> -->
                 </div>
                 <div class="py-5"></div>
             </div>
