add mldm and jonny to main page

--- a/index.html
+++ b/index.html
@@ -180,11 +180,19 @@
                 <div class="row">
                     <div class="col-md-5">
                         <p>
-                            CIRCLES is led by UC Berkeley and the Institute of Transportation Studies (ITS) Berkeley, in coordination with Vanderbilt University, University of Arizona, Temple University, Rutgers University-Camden, the Tennessee Department of Transportation, Toyota North America, and General Motors.
+                            CIRCLES is led by UC Berkeley and the Institute of Transportation Studies (ITS) Berkeley, in coordination with Vanderbilt University, Temple University, Rutgers University-Camden, the Tennessee Department of Transportation, Toyota North America, and Nissan North America.
                             The project is backed primarily by DOE and NSF funding. It will also provide the opportunity for engagement with major automotive partners and federal agencies (e.g., DOE, DOT).
                         </p>
 						<p>
                             <b>Alexandre Bayen</b>, ITS Director and Liao-Cho Professor, 
+                            Department of Electrical Engineering & Computer Science, UC Berkeley
+                        </p>
+                        <p>
+                            <b>Maria Laura Delle Monache</b>, Assistant Professor, 
+                            Department of Civil & Environmental Engineering, UC Berkeley
+                        </p>
+                        <p>
+                            <b>Jonathan Lee</b>, Senior Engineering Manager & Project Coordinator, 
                             Department of Electrical Engineering & Computer Science, UC Berkeley
                         </p>
                         <p>
