update dan and benni titles

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             Department of Mathematical Sciences, Rutgers University-Camden
                         </p>
                         <p>
-                            <b>Benjamin Seibold</b>, Associate Professor,
+                            <b>Benjamin Seibold</b>, Professor,
                             Department of Mathematics, Temple University
                         </p>
                         <p>
@@ -208,7 +208,7 @@
                             Department of Computer Science, Vanderbilt University
                         </p>
                         <p>
-                            <b>Daniel Work</b>, Associate Professor,
+                            <b>Daniel Work</b>, Professor,
                             Department of Civil and Environmental Engineering, Vanderbilt University
                         </p>                
                         <a class="btn btn-warning mb-3" href="about.html">View the entire team</a>
