--- a/about.html
+++ b/about.html
@@ -1052,10 +1052,7 @@
                 <span class="text-muted">&copy; 2020 CIRCLES</span>
             </div>
             <div class="container p-3 text-center">
-                <span class="text-muted">This material is based upon work supported by the National Science Foundation under Grant Numbers CNS-1837244 (A. Bayen), CNS-1837652 (D. Work), CNS-1837481 (B. Piccoli), CNS-1837210 (G. Pappas), CNS-1446715 (B. Piccoli), CNS-1446690 (B. Seibold), CNS-1446435 (J. Sprinkle, R. Lysecky), CNS-1446702 (D. Work). Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.</span>
-            </div>
-            <div class="container p-3 text-center">
-                <span class="text-muted">This material is based upon work supported by the U.S. Department of Energy’s Office of Energy Efficiency and Renewable Energy (EERE) award number CID DE-EE0008872. The views expressed herein do not necessarily represent the views of the U.S. Department of Energy or the United States Government. </span>
+                <span class="text-muted">This material is based upon work supported by the National Science Foundation under Grants CNS-1837244 (A. Bayen), CNS-1837652 (D. Work), CNS-1837481 (B. Piccoli), CNS-1837210 (G. Pappas), CNS-1446715 (B. Piccoli), CNS-1446690 (B. Seibold), CNS-1446435 (J. Sprinkle, R. Lysecky), CNS-1446702 (D. Work), CNS-2135579 (D. Work, A. Bayen, J. Sprinkle, J. Lee). This material is based upon work supported by the U.S. Department of Energy’s Office of Energy Efficiency and Renewable Energy (EERE) under the Vehicle Technologies Office award number CID DE-EE0008872. The views expressed herein do not necessarily represent the views of the U.S. Department of Energy or the United States Government.</span>
             </div>
         </footer>
 
