--- a/index.html
+++ b/index.html
@@ -757,6 +757,11 @@
                         </a>
                     </div>
                     <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
+                        <a href="https://www.gm.com/" target="_blank">
+                            <img class="funders-collaborators-img" src="images/collaborators/gm.png">
+                        </a>
+                    </div>
+                    <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
                         <a href="https://aws.amazon.com/" target="_blank">
                             <img class="funders-collaborators-img" src="images/collaborators/aws.png">
                         </a>        
