add rita headshot

--- a/about.html
+++ b/about.html
@@ -1001,6 +1001,13 @@
                                     </h6>
                                 </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-xu.png">
+                                    <h6 class="p-3">
+                                        Rita Xu <br>
+                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-you.jpg">
                                     <h6 class="p-3">
                                         Yiling You <br>
