--- a/about.html
+++ b/about.html
@@ -784,7 +784,7 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/berkeley/headshot-gibson.jpg">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
                                     <h6 class="p-3">
                                         Marsalis Gibson <br>
                                         <small class="text-muted">PhD Student, UC Berkeley</small>
