add salerno collaborators

--- a/about.html
+++ b/about.html
@@ -589,6 +589,13 @@
                                     </h6>
                                 </div>  -->
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/salerno/headshot-dapice.jpg">
+                                    <h6 class="p-3">
+                                        Ciro D'Apice <br>
+                                        <small class="text-muted">Full Professor, University of Salerno</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/tdot/headshot-elsaid.jpeg">
                                     <h6 class="p-3">
                                         Said El Said <br>
@@ -621,6 +628,13 @@
                                     <h6 class="p-3">
                                         Tony Kim <br>
                                         <small class="text-muted">Engineer, Toyota North America</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/salerno/headshot-manzo.png">
+                                    <h6 class="p-3">
+                                        Rosanna Manzo <br>
+                                        <small class="text-muted">Associate Professor, University of Salerno</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
