add rahul to frontpage

--- a/index.html
+++ b/index.html
@@ -210,6 +210,10 @@
                         <p>
                             <b>Daniel Work</b>, Professor,
                             Department of Civil and Environmental Engineering, Vanderbilt University
+                        </p>
+                        <p>
+                            <b>Rahul Bhadani</b>, Postdoctoral Researcher,
+                            Department of Computer Science, Vanderbilt University
                         </p>                
                         <a class="btn btn-warning mb-3" href="about.html">View the entire team</a>
                     </div>
