move Rahul name to Strym package

--- a/index.html
+++ b/index.html
@@ -210,11 +210,7 @@
                         <p>
                             <b>Daniel Work</b>, Professor,
                             Department of Civil and Environmental Engineering, Vanderbilt University
-                        </p>
-                        <p>
-                            <b>Rahul Bhadani</b>, Postdoctoral Researcher,
-                            Department of Computer Science, Vanderbilt University
-                        </p>                
+                        </p>              
                         <a class="btn btn-warning mb-3" href="about.html">View the entire team</a>
                     </div>
                     <div class="col-md-7">
@@ -301,7 +297,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Strym</h5>
                             <p class="card-text text-secondary">
-                                A Python package for real-time logging, analysis and visualization of vehicle data from CAN bus.
+                                A Python package for real-time logging, analysis and visualization of vehicle data from CAN bus. Developed by Vanderbilt postdoc Rahul Bhadani.
                             </p>
                         </div>
                         <div class="card-footer">
